# agentic-adios

./: .gitignore  Dockerfile.claude-code  README.md  REPLICATION-PROMPT.md  USER-INSTRUCTIONS.md  complete_implementation_guide.md  create-full-test-tar.sh  docker-compose.yml  session-wrapper.sh
claude/: Dockerfile.dangerous
claude-telemetry-analyzer/: README.md  pyproject.toml
claude-telemetry-analyzer/src/claude_telemetry_analyzer/: cli.py
claude_telemetry/: Dockerfile  Dockerfile.claude-code  README.md  analyze-telemetry.py  claude-telemetry-Test-User-20250708-150316_analysis.md  claude-telemetry-TestUser-20250708-151259_analysis.md  docker-compose.yml  entrypoint.sh  export-telemetry.sh  export-traces.sh  lifecycle-export.sh  mock-claude.sh  otel-collector-config.yaml  otel-config.yaml  prometheus.yml  run-claude.sh  setup.sh  shutdown-export.sh  telemetry-wrapper.sh  test-telemetry.sh
claude_telemetry/claude-telemetry-analyzer/src/claude_telemetry_analyzer/: __init__.py  analyzer.py
claude_telemetry/telemetry_examples/claude-telemetry-Test-User-20250708-150316/: TEST-EXPORT-README.txt  claude-telemetry.jsonl  test-summary.json
claude_telemetry/telemetry_examples/claude-telemetry-Test-User-20250708-150316/sessions/: interactions.jsonl  session-info.json
claude_telemetry/workspace/: agent.md
gemini/: Dockerfile  README.md  docker-compose.yml
gemini_cli_telemetry/: Dockerfile  docker-compose.yml  export-telemetry-manual.sh  otel-config.yaml  pyproject.toml  settings.json.template
gemini_cli_telemetry/workspace/: GEMINI.md  agent.md
opencoder-ollama/: Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.yml  start.sh
telemetry_analyzer/: README.md  cli.py  pyproject.toml  telemetry-report.md
telemetry_analyzer/telemetry_analyzer/: __init__.py  analyzer.py  cli.py  unified_analyzer.py
