[project]
name = "claude-telemetry-analyzer"
version = "0.1.0"
description = "Analyze Claude Code telemetry data and generate reports"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
telemetry = "telemetry_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telemetry_analyzer"]