[project]
name = "ai-agent-telemetry-analyzer"
version = "0.1.0"
description = "Analyze AI agent telemetry data (Claude Code, Gemini CLI) and generate reports"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "orjson>=3.8.0",
    "tabulate>=0.9.0"
]

[project.scripts]
telemetry = "telemetry_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telemetry_analyzer"]